--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>QuestionApp</title>
+    <title>SportsQuestionApp</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="app"></div>
